syntax = "proto3";

package rumble.api.v1;

// =============================================================================
// Core Types
// =============================================================================

// RoomId is a 16-byte UUID.
// The Root room always has UUID 0 (all zeros).
// New rooms are assigned random UUIDs.
message RoomId {
  bytes uuid = 1;  // 16 bytes
}

message UserId {
  uint64 value = 1;
}

// =============================================================================
// User and Room Definitions
// =============================================================================

// User identity and current room membership.
// The current_room field tracks which room the user is in.
// is_muted and is_deafened indicate the user's self-mute/deafen status.
message User {
  UserId user_id = 1;
  string username = 2;
  RoomId current_room = 3;
  bool is_muted = 4;     // User has muted themselves (not transmitting)
  bool is_deafened = 5;  // User has deafened themselves (not receiving audio; implies muted)
}

// Room definition.
message RoomInfo {
  RoomId id = 1;
  string name = 2;
}

// Full state snapshot sent on initial sync and resync.
message ServerState {
  repeated RoomInfo rooms = 1;
  repeated User users = 2;
}

// =============================================================================
// Voice Datagram (QUIC unreliable datagrams)
// =============================================================================

// Voice data sent via QUIC datagrams (unreliable, low-latency).
// This is a standalone message not wrapped in Envelope for minimal overhead.
//
// Client -> Server: Only opus_data, sequence, and timestamp_us are set.
//   The server determines sender_id and room_id from the connection.
//
// Server -> Client: All fields are populated by the server.
//   sender_id and room_id are set by the server based on the sender's
//   authenticated identity and current room membership.
message VoiceDatagram {
  // Opus-encoded audio frame (may be empty if end_of_stream is true)
  bytes opus_data = 1;
  
  // Sequence number for ordering/jitter buffer (client should increment)
  uint32 sequence = 2;
  
  // Timestamp in microseconds (client's capture time, for jitter buffer sync)
  // Optional: if not set, receiver can use arrival time
  uint64 timestamp_us = 3;
  
  // End of stream marker. When true, indicates the sender has stopped
  // transmitting (PTT released, VAD triggered, muted, etc.).
  // The receiver should stop expecting packets after this sequence number
  // and not count subsequent missing packets as lost.
  // opus_data may be empty when this is true.
  bool end_of_stream = 4;
  
  // --- Fields set by server on relay, ignored if sent by client ---
  
  // User ID of the sender (set by server based on authenticated connection)
  optional uint64 sender_id = 10;
  
  // Room ID where this audio originated (set by server based on sender's room)
  // This is a UUID (16 bytes)
  optional bytes room_id = 11;
}

// =============================================================================
// Envelope (Reliable Stream Messages)
// =============================================================================

// Generic envelope that carries a single payload and an optional state hash.
// All reliable messages are wrapped in an Envelope.
message Envelope {
  bytes state_hash = 1; // BLAKE3 hash over canonical protobuf serialization
  oneof payload {
    // Authentication (10-19)
    ClientHello client_hello = 10;
    ServerHello server_hello = 11;
    Authenticate authenticate = 15;
    AuthFailed auth_failed = 17;
    
    // Chat and status
    ChatMessage chat_message = 12;
    Disconnect disconnect = 13;
    ServerEvent server_event = 14;
    JoinRoom join_room = 16;
    CreateRoom create_room = 20;
    DeleteRoom delete_room = 21;
    RenameRoom rename_room = 22;
    RequestStateSync request_state_sync = 23;
    SetUserStatus set_user_status = 24;
    
    // Registration (40-49)
    RegisterUser register_user = 40;
    UnregisterUser unregister_user = 41;
    
    // General command result (50)
    CommandResult command_result = 50;
  }
}

// =============================================================================
// Client -> Server Messages
// =============================================================================

// Sent by client immediately after connecting and opening the control stream.
message ClientHello {
  string username = 1;
  bytes public_key = 2;       // Ed25519 public key (32 bytes)
  optional string password = 3; // Server password (required for unknown keys)
}

// Request to join a room.
message JoinRoom {
  RoomId room_id = 1;
}

// Room management requests
message CreateRoom { 
  string name = 1; 
}

message DeleteRoom { 
  RoomId room_id = 1; 
}

message RenameRoom { 
  RoomId room_id = 1; 
  string new_name = 2; 
}

// Request a full state resync from the server.
// Sent by the client when it detects a state hash mismatch.
message RequestStateSync {
  // The hash the client expected (for debugging/logging).
  bytes expected_hash = 1;
  // The hash the client computed locally (for debugging/logging).
  bytes actual_hash = 2;
}

// Chat message sent from client to server.
message ChatMessage {
  string sender = 1;
  string text = 2;
}

// Graceful disconnect notification.
message Disconnect {
  string reason = 1;
}

// =============================================================================
// Server -> Client Messages
// =============================================================================

// Initial response from server after ClientHello.
message ServerHello {
  bytes nonce = 1;            // Random 32-byte challenge
  string server_name = 2;
  uint64 user_id = 3;         // Assigned user ID for this session
}

// Sent by client to prove key ownership.
message Authenticate {
  bytes signature = 1;        // Ed25519 signature (64 bytes)
  int64 timestamp_ms = 2;     // Unix timestamp in milliseconds
}

// Sent by server on authentication failure.
message AuthFailed {
  string error = 1;           // Human-readable error message
}

// Events pushed from server to clients.
message ServerEvent {
  oneof kind {
    ChatBroadcast chat_broadcast = 1;
    // Periodic keep-alive ping from the server.
    KeepAlive keep_alive = 2;
    // Full state snapshot (used for initial sync and resync)
    ServerState server_state = 3;
    // Incremental state update with hash for verification
    StateUpdate state_update = 7;
  }
}

// Broadcast of a chat message to all connected clients in the same room.
message ChatBroadcast {
  string sender = 1;
  string text = 2;
}

// Empty keep-alive message with optional timestamp.
message KeepAlive {
  uint64 epoch_ms = 1;
}

// =============================================================================
// State Synchronization
// =============================================================================

// Incremental state update message.
// Contains a single state change and the expected hash after applying it.
// Client applies the update locally and verifies the resulting hash.
// If mismatch, client requests a full resync.
message StateUpdate {
  // The state hash AFTER this update is applied.
  // Client should compute its local hash after applying and compare.
  bytes expected_hash = 1;
  
  oneof update {
    // A user moved to a different room
    UserMoved user_moved = 10;
    // A new user joined the server
    UserJoined user_joined = 11;
    // A user left the server
    UserLeft user_left = 12;
    // A new room was created
    RoomCreated room_created = 13;
    // A room was deleted
    RoomDeleted room_deleted = 14;
    // A room was renamed
    RoomRenamed room_renamed = 15;
    // A user's mute/deafen status changed
    UserStatusChanged user_status_changed = 16;
  }
}

// Incremental update: user moved to a different room.
// The from_room is implicit (tracked on client from User.current_room).
message UserMoved {
  UserId user_id = 1;
  RoomId to_room_id = 2;
}

// Incremental update: new user joined the server.
message UserJoined {
  User user = 1;
}

// Incremental update: user left the server.
message UserLeft {
  UserId user_id = 1;
}

// Incremental update: new room created.
message RoomCreated {
  RoomInfo room = 1;
}

// Incremental update: room deleted.
// Users that were in the room are moved to fallback_room_id (usually Root).
message RoomDeleted {
  RoomId room_id = 1;
  RoomId fallback_room_id = 2;
}

// Incremental update: room renamed.
message RoomRenamed {
  RoomId room_id = 1;
  string new_name = 2;
}

// Incremental update: user's mute/deafen status changed.
message UserStatusChanged {
  UserId user_id = 1;
  bool is_muted = 2;
  bool is_deafened = 3;
}

// =============================================================================
// Client -> Server: User Status
// =============================================================================

// Client notifies server of mute/deafen state changes.
// Server will broadcast UserStatusChanged to all connected clients.
message SetUserStatus {
  bool is_muted = 1;
  bool is_deafened = 2;
}

// =============================================================================
// Registration Messages
// =============================================================================

// Register a user (binds username to public key permanently).
message RegisterUser {
  UserId user_id = 1;         // User to register (allows admin to register others)
}

// Unregister a user (unbinds username from public key).
message UnregisterUser {
  UserId user_id = 1;
}

// =============================================================================
// Command Result (General Response)
// =============================================================================

// Result of a command that can succeed or fail.
// Sent by the server in response to commands like CreateRoom, DeleteRoom,
// RegisterUser, etc. The command field indicates which command this is
// a response to.
message CommandResult {
  // The command this is a response to (e.g., "RegisterUser", "CreateRoom")
  string command = 1;
  // Whether the command succeeded
  bool success = 2;
  // Human-readable message (success confirmation or error description)
  string message = 3;
}
